# python-evidence-gate

./: .gitignore  .gitleaks.toml  CHANGELOG.md  LICENSE  Makefile  README.md  SPR-python-evidence-gate.manifest.yaml  SPR-python-evidence-gate.md  TODO.md  install.sh  pyproject.toml
.claude/hooks/: python_evidence_gate.py
.claude/hooks/tests/: test_python_evidence_gate.py
.codex/hooks/: python_evidence_core.py  python_evidence_postuse.py  python_evidence_stop.py  python_evidence_userprompt.py
.codex/hooks/tests/: test_python_evidence.py
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md  SCHEMAS.md  WINDOWS.md  architecture.md  doctrine.claude.md  doctrine.codex.md  pyproject.example.toml  requirements.md  runbook.md
docs/adr/: 0001-initial-stack.md
docs/project/: risk-register.md  roadmap.md
docs/security/: asvs-checklist.md  threat-model.md
scripts/: uninstall.sh
