[project]
name = "python-evidence-gate"
version = "0.1.0"
description = "Block AI coding agents from marking Python work done without successful ruff/mypy/pytest evidence."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "The python-evidence-gate authors" }]
keywords = ["claude-code", "codex", "ai-agent", "hook", "ruff", "mypy", "pytest", "linting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.15",
    "mypy>=2.0",
    "pytest>=9.0",
    "pytest-cov>=5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = [".claude/hooks/tests", ".codex/hooks/tests"]
